force-app/src/objects/TR1__MassPlacement_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__FieldSetName__c</fullName>
        <label>Closing Report Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Field_Set_Name__c</fullName>
        <label>Job Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Record_Type_Name__c</fullName>
        <label>Job Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MassPlacement Mapping(Deprecated)</label>
    <pluralLabel>MassPlacement Mappings</pluralLabel>
</CustomObject>